tests/Rules/Aria/Fixtures/valid/aria_hidden_tabindex_minus_one.html.twig
<div tabindex="-1" aria-hidden="true">Off-screen content</div>
