tests/Rules/Aria/Fixtures/invalid/aria_invalid_attr.html.twig
{# 1 errors #}
<div aria-foo="bar">Broken</div>
